# cg-2023-lab1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  quaternion.hpp  setup.hpp
configuration/: config.h.in
core/: GLWindow.hpp  HGL  useImgui.hpp
core/renderTools/: camera.hpp  modelLoader.hpp  shaderLoader.hpp  texture.hpp  textureRegister.hpp  uniformBuffer.hpp
core/renderTools/object/: frameBuffer.hpp  gbuffer.hpp  hdr.hpp  object.hpp
includes/dyTool/: sugar.hpp
shaders/: lightbox.fs  lightbox.vs  model_render.fs  model_render.vs  plane.fs  plane.vs  skybox.fs  skybox.vs
shaders/gbuffer/: gbuffer.fs  gbuffer.vs
shaders/shadow/: depthShader.fs  depthShader.vs
src/: useImgui.cpp
tests/: CMakeLists.txt  test_quat.cpp
